; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_attr.c_git_attr_value.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_attr.c_git_attr_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@git_attr__unset = common dso_local global i8* null, align 8
@GIT_ATTR_VALUE_UNSPECIFIED = common dso_local global i32 0, align 4
@git_attr__true = common dso_local global i8* null, align 8
@GIT_ATTR_VALUE_TRUE = common dso_local global i32 0, align 4
@git_attr__false = common dso_local global i8* null, align 8
@GIT_ATTR_VALUE_FALSE = common dso_local global i32 0, align 4
@GIT_ATTR_VALUE_STRING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_attr_value(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = icmp eq i8* %4, null
  br i1 %5, label %10, label %6

6:                                                ; preds = %1
  %7 = load i8*, i8** %3, align 8
  %8 = load i8*, i8** @git_attr__unset, align 8
  %9 = icmp eq i8* %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %6, %1
  %11 = load i32, i32* @GIT_ATTR_VALUE_UNSPECIFIED, align 4
  store i32 %11, i32* %2, align 4
  br label %26

12:                                               ; preds = %6
  %13 = load i8*, i8** %3, align 8
  %14 = load i8*, i8** @git_attr__true, align 8
  %15 = icmp eq i8* %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %12
  %17 = load i32, i32* @GIT_ATTR_VALUE_TRUE, align 4
  store i32 %17, i32* %2, align 4
  br label %26

18:                                               ; preds = %12
  %19 = load i8*, i8** %3, align 8
  %20 = load i8*, i8** @git_attr__false, align 8
  %21 = icmp eq i8* %19, %20
  br i1 %21, label %22, label %24

22:                                               ; preds = %18
  %23 = load i32, i32* @GIT_ATTR_VALUE_FALSE, align 4
  store i32 %23, i32* %2, align 4
  br label %26

24:                                               ; preds = %18
  %25 = load i32, i32* @GIT_ATTR_VALUE_STRING, align 4
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %24, %22, %16, %10
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
